[Notebook][1.change_format] Fix Bugs in joint mapping and axis order

--- a/notebooks/1.change_format/change_format.ipynb
+++ b/notebooks/1.change_format/change_format.ipynb
@@ -183,95 +183,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy as np\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# from mpl_toolkits.mplot3d import Axes3D\n",
-    "# from matplotlib.animation import FuncAnimation\n",
-    "\n",
-    "# # Set up figure and 3D axes\n",
-    "# fig = plt.figure(figsize=(10, 10))\n",
-    "# ax = fig.add_subplot(projection='3d')\n",
-    "\n",
-    "\n",
-    "# # List to hold the line objects for animation\n",
-    "# lines = []\n",
-    "\n",
-    "# # Function to update the plot for each frame\n",
-    "# def update(frame_idx):\n",
-    "#     ax.cla()  # Clear previous frame\n",
-    "\n",
-    "#     ax.set_title(content_full_names[int(file[-10:-8]) - 1])\n",
-    "\n",
-    "#     ax.set_xlim(-10, 25)\n",
-    "#     ax.set_ylim(-10, 25)\n",
-    "#     ax.set_zlim(-10, 25)\n",
-    "\n",
-    "\n",
-    "#     for name in bvh_data.get_joints_names():\n",
-    "#         parent_idx = bvh_data.joint_parent_index(name)\n",
-    "#         if parent_idx >= 0:\n",
-    "#             parent_name = bvh_data.get_joints_names()[parent_idx]\n",
-    "#         else:\n",
-    "#             parent_name = None\n",
-    "#             continue\n",
-    "        \n",
-    "#         # Fetch the joint positions for the current frame\n",
-    "#         x1 = df.iloc[frame_idx][name + \".X\"]\n",
-    "#         y1 = df.iloc[frame_idx][name + \".Y\"]\n",
-    "#         z1 = df.iloc[frame_idx][name + \".Z\"]\n",
-    "\n",
-    "#         x2 = df.iloc[frame_idx][parent_name + \".X\"]\n",
-    "#         y2 = df.iloc[frame_idx][parent_name + \".Y\"]\n",
-    "#         z2 = df.iloc[frame_idx][parent_name + \".Z\"]\n",
-    "\n",
-    "#         # Create plot for the connection between joints\n",
-    "#         line, = ax.plot([x1, x2], [z1, z2], [y1, y2], \"bo-\")\n",
-    "#         lines.append(line)\n",
-    "\n",
-    "#         # Collect joint positions for the scatter plot\n",
-    "\n",
-    "#     # Optionally add scatter plot for joint positions\n",
-    "    \n",
-    "#     plt.draw()\n",
-    "\n",
-    "# # Create the animation\n",
-    "# fps = int(1/bvh_data.frame_time)\n",
-    "# ani = FuncAnimation(fig, update, frames=df.shape[0], interval=1000/fps, repeat=False)\n",
-    "\n",
-    "# if not os.path.exists(CACHE_DIR):\n",
-    "#     os.makedirs(CACHE_DIR)\n",
-    "# ani.save('%s/mocap_sample_data_%s.mp4' % (OUTPUT_DIR, file[:file.find(\".\")]), writer='ffmpeg', fps=fps, dpi=80)\n",
-    "\n",
-    "# plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "('pelvis', 'left_hip'), ('pelvis', 'right_hip'),\n",
     "('left_hip', 'left_knee'), ('right_hip', 'right_knee'),\n",
     "('left_knee', 'left_ankle'), ('right_knee', 'right_ankle'),\n",
@@ -297,13 +208,16 @@
     "    'right_hip': 'RightUpLeg',\n",
     "\n",
     "    'pelvis': 'Hips',\n",
-    "    'spine1': 'Spine1',\n",
-    "    'spine2': 'Spine',\n",
-    "    'spine3': 'LowerBack',\n",
-    "    'neck': 'Neck1',\n",
     "\n",
-    "    'left_collar': 'LeftShoulder',\n",
-    "    'right_collar': 'RightShoulder',\n",
+    "\n",
+    "    'spine1': 'LowerBack',\n",
+    "    'spine2': 'Spine',\n",
+    "    'spine3': 'Spine1',\n",
+    "    'neck': 'Head',\n",
+    "\n",
+    "    'left_collar': 'LeftArm',\n",
+    "    'right_collar': 'RightArm',\n",
+    "\n",
     "    'right_wrist': 'RightHand',\n",
     "    'left_index3': 'LeftHandIndex1End',\n",
     "    'right_index2': 'RightHandIndex1End',\n",
@@ -338,82 +252,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy as np\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# from mpl_toolkits.mplot3d import Axes3D\n",
-    "# from matplotlib.animation import FuncAnimation\n",
-    "\n",
-    "# # Create a 3D plot\n",
-    "# fig = plt.figure(figsize=(10, 10))\n",
-    "# ax = fig.add_subplot(111, projection='3d')\n",
-    "# data_index=1\n",
-    "\n",
-    "# def update(frame_idx):\n",
-    "#     ax.cla()\n",
-    "\n",
-    "#     ax.set_title(content_full_names[int(file[-10:-8])])\n",
-    "\n",
-    "#     ax.set_xlim(-10, 25)\n",
-    "#     ax.set_ylim(-10, 25)\n",
-    "#     ax.set_zlim(-10, 25)\n",
-    "\n",
-    "\n",
-    "#     for v in [\n",
-    "#         ('pelvis', 'left_hip'), ('pelvis', 'right_hip'),\n",
-    "#         ('left_hip', 'left_knee'), ('right_hip', 'right_knee'),\n",
-    "#         ('left_knee', 'left_ankle'), ('right_knee', 'right_ankle'),\n",
-    "#         ('left_ankle', 'left_foot'), ('right_ankle', 'right_foot'),\n",
-    "#         ('pelvis', 'spine1'),\n",
-    "#         ('spine1', 'spine2'),\n",
-    "#         ('spine2', 'spine3'),\n",
-    "#         ('spine3', 'neck'),\n",
-    "#         ('left_collar', 'right_collar'),\n",
-    "#         ('right_collar', 'right_wrist'),\n",
-    "#         ('right_wrist', 'right_index2'),\n",
-    "#         ('left_collar', 'left_index3')\n",
-    "#     ]:\n",
-    "#         # vec = [joints_to_index[j] for j in v]\n",
-    "\n",
-    "#         # ax.plot(xs=x[vec], ys=y[vec], zs=z[vec], c='r', linestyle='-', marker='o')  # Line plot connecting the points\n",
-    "#         vec = [joint_mapping[j]+\".X\" for j in v]\n",
-    "#         x = (df.iloc[frame_idx][vec].to_numpy())\n",
-    "\n",
-    "#         vec = [joint_mapping[j]+\".Y\" for j in v]\n",
-    "#         z = (df.iloc[frame_idx][vec].to_numpy())\n",
-    "\n",
-    "#         vec = [joint_mapping[j]+\".Z\" for j in v]\n",
-    "#         y = (df.iloc[frame_idx][vec].to_numpy())\n",
-    "\n",
-    "#         ax.scatter(x, y, z, c='b', marker='o')  # Scatter plot for the points\n",
-    "#         ax.plot(xs=x, ys=y, zs=z, c='r', linestyle='-', marker='o')  # Line plot connecting the points\n",
-    "\n",
-    "\n",
-    "#     # Set labels for the axes\n",
-    "#     ax.set_xlabel('X Axis')\n",
-    "#     ax.set_ylabel('Y Axis')\n",
-    "#     ax.set_zlabel('Z Axis')\n",
-    "\n",
-    "#     # Set the title\n",
-    "#     # ax.set_title(data[\"text_raw_labels\"][data_index][frame_idx])\n",
-    "\n",
-    "#     # Show the plot\n",
-    "#     plt.draw()# \n",
-    "\n",
-    "\n",
-    "# fps = int(1/bvh_data.frame_time)\n",
-    "# ani = FuncAnimation(fig, update, frames=df.shape[0], interval=1000/fps, repeat=False)\n",
-    "\n",
-    "# ani.save('mocap_sample_data_%s_in_amass_format.mp4' % file[:file.find(\".\")], writer='ffmpeg', fps=fps, dpi=80)\n",
-    "\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if not os.path.exists(OUTPUT_DIR):\n",
     "    os.makedirs(OUTPUT_DIR)\n",
     "\n",
@@ -437,8 +275,6 @@
     "  ax = fig.add_subplot(projection='3d')\n",
     "\n",
     "\n",
-    "  # List to hold the line objects for animation\n",
-    "#   lines = []\n",
     "\n",
     "  # Function to update the plot for each frame\n",
     "  def update(frame_idx):\n",
@@ -469,8 +305,7 @@
     "          z2 = df.iloc[frame_idx][parent_name + \".Z\"]\n",
     "\n",
     "          # Create plot for the connection between joints\n",
-    "          line, = ax.plot([x1, x2], [z1, z2], [y1, y2], \"bo-\")\n",
-    "        #   lines.append(line)\n",
+    "          ax.plot([x1, x2], [z1, z2], [y1, y2], \"bo-\")\n",
     "\n",
     "          # Collect joint positions for the scatter plot\n",
     "\n",
@@ -517,7 +352,6 @@
     "      ]:\n",
     "          # vec = [joints_to_index[j] for j in v]\n",
     "\n",
-    "          # ax.plot(xs=x[vec], ys=y[vec], zs=z[vec], c='r', linestyle='-', marker='o')  # Line plot connecting the points\n",
     "          vec = [joint_mapping[j]+\".X\" for j in v]\n",
     "          x = (df.iloc[frame_idx][vec].to_numpy())\n",
     "\n",
@@ -528,7 +362,7 @@
     "          y = (df.iloc[frame_idx][vec].to_numpy())\n",
     "\n",
     "          ax.scatter(x, y, z, c='b', marker='o')  # Scatter plot for the points\n",
-    "          ax.plot(xs=x, ys=y, zs=z, c='r', linestyle='-', marker='o')  # Line plot connecting the points\n",
+    "          ax.plot(xs=x, ys=y, zs=z, c='r', linestyle='-', marker='o')\n",
     "\n",
     "\n",
     "      # Set labels for the axes\n",
@@ -546,7 +380,7 @@
     "  fps = int(1/bvh_data.frame_time)\n",
     "  ani = FuncAnimation(fig, update, frames=df.shape[0], interval=1000/fps, repeat=False)\n",
     "\n",
-    "  ani.save('%s/mocap_sample_data_%s_in_amass_format.mp4' % (VISUALIZE_OUTPUT_DIR, file[:file.find(\".\")]), writer='ffmpeg', fps=fps, dpi=80)\n"
+    "  ani.save('%s/mocap_sample_data_%s_in_amass_format.mp4' % (VISUALIZE_OUTPUT_DIR, file[:file.find(\".\")]), writer='ffmpeg', fps=fps, dpi=80)"
    ]
   },
   {
@@ -582,8 +416,8 @@
     "\n",
     "    res = np.stack([\n",
     "        df[[joint_mapping[j]+\".X\" for j in joints]].to_numpy(),\n",
-    "        df[[joint_mapping[j]+\".Y\" for j in joints]].to_numpy(),\n",
-    "        df[[joint_mapping[j]+\".Z\" for j in joints]].to_numpy()], axis=-1)\n",
+    "        df[[joint_mapping[j]+\".Z\" for j in joints]].to_numpy(),           # HINT: in amass dataset Z and Y are different from here\n",
+    "        df[[joint_mapping[j]+\".Y\" for j in joints]].to_numpy()], axis=-1)\n",
     "\n",
     "    np.save(DATA_OUTPUT_DIR + \"/\" + file[:-4] + \".npy\", res)"
    ]
